--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,78 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Crypto"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="1024" Width="1440" Background="#04255E">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Button.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Card.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.CheckBox.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Flipper.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Popupbox.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="430*"/>
+            <ColumnDefinition Width="1000*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40*"/>
+            <RowDefinition Height="383*"/>
+        </Grid.RowDefinitions>
+        <Border Grid.ColumnSpan="1" Grid.Row="1" Background="#184287">
+        </Border>
+        <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Grid Width="250" Height="65" HorizontalAlignment="Right">
+                <Button BorderBrush="White" Foreground="White" Background="Transparent" Content="Input" Width="60" Height="25" FontSize="14" FontWeight="ExtraBold" Margin="60,16,98,24">
+                    <Button.Resources>
+                       <Style TargetType="{x:Type Border}">
+                          <Setter Property="CornerRadius" Value="5"/>
+                       </Style>
+                    </Button.Resources>
+                </Button>
+                <Button BorderBrush="White" Foreground="White" Background="Transparent" Content="Registration" Height="25" FontSize="13" FontWeight="ExtraBold" HorizontalAlignment="Left" Margin="145,16,0,24" Width="90">
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
+            </Grid>
+        </StackPanel>
+        <Border Grid.ColumnSpan="1" Grid.Row="0" Background="#184287">
+            <Image Source="Logo/BTC.jpg" Margin="0,-2,270,-2"/>
+        </Border>
+        <StackPanel Grid.Column="2" Grid.Row="2">
+            <Grid>
+                <Button BorderBrush="White" Foreground="White" Background="Transparent" Content="gjgbhjghjbjh" FontSize="14" FontWeight="ExtraBold" Height="60">
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
+            </Grid>
+            <Grid>
+                <Button BorderBrush="White" Foreground="White" Background="Transparent" Content="ghjvhjvjh" Height="60" FontSize="14" FontWeight="ExtraBold">
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
+            </Grid>
+            <Grid>
+                <Button BorderBrush="White" Foreground="White" Background="Transparent" Content="ghjvbhjb" Height="60" FontSize="14" FontWeight="ExtraBold">
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
+            </Grid>
+        </StackPanel>
     </Grid>
 </Window>
