--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,17 +6,7 @@
         xmlns:local="clr-namespace:Crypto"
         mc:Ignorable="d"
         Title="MainWindow" Height="1024" Width="1440" Background="#04255E">
-    <Window.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Button.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Card.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.CheckBox.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Flipper.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Popupbox.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Window.Resources>
+    
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="430*"/>
@@ -47,7 +37,7 @@
             </Grid>
         </StackPanel>
         <Border Grid.ColumnSpan="1" Grid.Row="0" Background="#184287">
-            <Image Source="Logo/BTC.jpg" Margin="0,-2,270,-2"/>
+            <Image Source="Logo/Dragonchain.png" Margin="0,-2,270,-2"/>
         </Border>
         <StackPanel Grid.Column="2" Grid.Row="2">
             <Grid>
