--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,67 +6,38 @@
         xmlns:local="clr-namespace:Crypto"
         mc:Ignorable="d"
         Title="MainWindow" Height="1024" Width="1440" Background="#04255E">
-    
+
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="430*"/>
-            <ColumnDefinition Width="1000*"/>
+            <ColumnDefinition Width="0.4*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="0.2*"/>
+            <ColumnDefinition Width="0.2*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="40*"/>
-            <RowDefinition Height="383*"/>
+            <RowDefinition Height="0.3*"/>
+            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
-        <Border Grid.ColumnSpan="1" Grid.Row="1" Background="#184287">
-        </Border>
-        <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Grid Width="250" Height="65" HorizontalAlignment="Right">
-                <Button BorderBrush="White" Foreground="White" Background="Transparent" Content="Input" Width="60" Height="25" FontSize="14" FontWeight="ExtraBold" Margin="60,16,98,24">
-                    <Button.Resources>
-                       <Style TargetType="{x:Type Border}">
-                          <Setter Property="CornerRadius" Value="5"/>
-                       </Style>
-                    </Button.Resources>
-                </Button>
-                <Button BorderBrush="White" Foreground="White" Background="Transparent" Content="Registration" Height="25" FontSize="13" FontWeight="ExtraBold" HorizontalAlignment="Left" Margin="145,16,0,24" Width="90">
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-            </Grid>
+
+        <Button Grid.Row="0" Grid.Column="2" BorderBrush="White" Foreground="White" Background="Transparent" Content="Input" Height="25" FontSize="14" FontWeight="ExtraBold" Width="80">
+            <Button.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="5"/>
+                </Style>
+            </Button.Resources>
+        </Button>
+        <Button Grid.Row="0" Grid.Column="3" BorderBrush="White" Foreground="White" Background="Transparent" Content="Registration" Height="25" FontSize="13" FontWeight="ExtraBold" Width="100">
+            <Button.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="5"/>
+                </Style>
+            </Button.Resources>
+        </Button>
+        <StackPanel Orientation="Horizontal">
+            <Image Source="Logo/Dragonchain.png" Width="85" Margin="20 0 0 0"/>
+            <TextBlock Text="Crypto" Foreground="White" FontSize="45" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="20 0 0 0"/>
         </StackPanel>
-        <Border Grid.ColumnSpan="1" Grid.Row="0" Background="#184287">
-            <Image Source="Logo/Dragonchain.png" Margin="0,-2,270,-2"/>
-        </Border>
-        <StackPanel Grid.Column="2" Grid.Row="2">
-            <Grid>
-                <Button BorderBrush="White" Foreground="White" Background="Transparent" Content="gjgbhjghjbjh" FontSize="14" FontWeight="ExtraBold" Height="60">
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-            </Grid>
-            <Grid>
-                <Button BorderBrush="White" Foreground="White" Background="Transparent" Content="ghjvhjvjh" Height="60" FontSize="14" FontWeight="ExtraBold">
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-            </Grid>
-            <Grid>
-                <Button BorderBrush="White" Foreground="White" Background="Transparent" Content="ghjvbhjb" Height="60" FontSize="14" FontWeight="ExtraBold">
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-            </Grid>
-        </StackPanel>
+       
+        <DataGrid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4"  Background="#04255E" Margin="0,105,0,0" Grid.RowSpan="2"/>
     </Grid>
 </Window>
